adding people-py, knoedler-py, test-people

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -2,3 +2,6 @@
 * xref:bonobo-nodes.adoc[]
 * xref:bonobo-services.adoc[]
 * xref:linkedart-py.adoc[]
+* xref:people-py.adoc[]
+* xref:test-people-issue.adoc[]
+* xref:knoedler-py.adoc[]
