--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -5,3 +5,8 @@
 * xref:people-py.adoc[]
 * xref:test-people-issue.adoc[]
 * xref:knoedler-py.adoc[]
+* xref:notes-zoom-call.adoc[]
+* xref:notes.adoc[]
+* xref:questions.adoc[]
+* xref:meeting-notes.adoc[]
+* xref:postprocessing-questions.adoc[]
