--- a/modules/ROOT/pages/questions.adoc
+++ b/modules/ROOT/pages/questions.adoc
@@ -9,5 +9,5 @@
     ** MakeLinkedArt* (linkedart.py)
     ** Good practices ? 
 
-image:classes.png[]
-image:initpy.png[]
+image::classes.png[]
+image::initpy.png[]
