--- a/modules/ROOT/pages/postprocessing-questions.adoc
+++ b/modules/ROOT/pages/postprocessing-questions.adoc
@@ -59,7 +59,7 @@ Make targets invoke scripts which handle the post-processing:
 }
 
 /*/\\__init__.py : +
-image:salebuyer.png[]
+image::salebuyer.png[]
 
 pipeline/util/\\__init__.py : +
 list of functions for post processing
