--- a/modules/ROOT/pages/test-image.adoc
+++ b/modules/ROOT/pages/test-image.adoc
@@ -4,5 +4,46 @@ image::test.jpeg[]
 
 ....
 test  
-test
+    test
 ....
+
+.Title
+====
+test
+test 
+====
+
+====
+Here's a sample AsciiDoc document:
+
+----
+= Document Title
+Author Name
+
+Content goes here.
+----
+
+The document header is useful, but not required.
+====
+
+
+====
+Here are your options:
+
+.Red Pill
+[%collapsible]
+======
+Escape into the real world.
+======
+
+.Blue Pill
+[%collapsible]
+======
+Live within the `simulated` reality without want or fear.
+======
+====
+
+.Test
+[sidebar]
+test + 
+icon:twitter[role=aqua]
