--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,6 +1,9 @@
 * xref:index.adoc[]
+
+.Bonobo
 * xref:bonobo-nodes.adoc[]
 * xref:bonobo-services.adoc[]
+
 * xref:linkedart-py.adoc[]
 * xref:people-py.adoc[]
 * xref:test-people-issue.adoc[]
