--- a/modules/ROOT/pages/test-image.adoc
+++ b/modules/ROOT/pages/test-image.adoc
@@ -16,3 +16,6 @@ test
 
 == Reference
 xref:bonobo-nodes.adoc[Bonobo nodes]
+
+{{log "inside partial" this}} +
+{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}  <p>Place: <semantic-link iri='{{place}}'></semantic-link><p>
